feat: article list, form view 게시글 리스트 및 작성 폼 추가

--- a/src/main/resources/templates/article_form.html
+++ b/src/main/resources/templates/article_form.html
@@ -1,10 +1,22 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
-</head>
-<body>
-$END$
-</body>
+<html layout:decorate="~{layout}">
+<div layout:fragment="content" class="container">
+    <h5 class="my-3 border-bottom pb-2">게시글 등록</h5>
+    <form th:object="${articleForm}" method="post">
+        <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
+        <div th:replace="~{form_errors :: formErrorsFragment}"></div>
+        <div class="mb-3">
+            <label for="title" class="form-label">제목</label>
+            <input type="text" th:field="*{title}" class="form-control">
+        </div>
+        <div class="mb-3">
+            <label for="body" class="form-label">내용</label>
+            <textarea th:field="*{body}" class="form-control" rows="10"></textarea>
+        </div>
+        <div class="mb-3">
+            <label for="is_published" class="form-label">공개 설정</label>
+            <input type="checkbox"/>
+        </div>
+        <input type="submit" value="저장하기" class="btn btn-primary my-2">
+    </form>
+</div>
 </html>
