--- a/src/main/resources/templates/article_list.html
+++ b/src/main/resources/templates/article_list.html
@@ -2,7 +2,7 @@
 <div layout:fragment="content" class="container my-3">
     <div class="row my-3">
         <div class="col-6">
-            <a th:href="@{/question/create}" class="btn btn-primary">질문 등록하기</a>
+            <a th:href="@{/article/create}" class="btn btn-primary">질문 등록하기</a>
         </div>
     </div>
     <table class="table">
@@ -16,17 +16,16 @@
         </tr>
         </thead>
         <tbody>
-        <tr class="text-center" th:each="question, loop : ${paging}">
-            <td th:text="${paging.getTotalElements - (paging.number * paging.size) - loop.index}"></td>
+        <tr class="text-center" th:each="article, loop : ${paging}">
             <td class="text-start">
-                <a th:href="@{|/question/detail/${question.id}|}" th:text="${question.subject}"></a>
-                <span class="text-danger small ms-2"
-                      th:if="${#lists.size(question.answerList) > 0}"
-                      th:text="${#lists.size(question.answerList)}">
-                    </span>
+                <a th:href="@{|/article/detail/${article.id}|}" th:text="${article.title}"></a>
+<!--                <span class="text-danger small ms-2"-->
+<!--                      th:if="${#lists.size(question.answerList) > 0}"-->
+<!--                      th:text="${#lists.size(question.answerList)}">-->
+<!--                    </span>-->
             </td>
-            <td><span th:if="${question.author != null}" th:text="${question.author.username}"></span></td>
-            <td th:text="${#temporals.format(question.createDate, 'yyyy-MM-dd HH:mm')}"></td>
+            <td><span th:if="${article.writer != null}" th:text="${article.writer.username}"></span></td>
+            <td th:text="${#temporals.format(article.datetime, 'yyyy-MM-dd HH:mm')}"></td>
         </tr>
         </tbody>
     </table>
