--- a/src/main/resources/templates/article_list.html
+++ b/src/main/resources/templates/article_list.html
@@ -2,30 +2,30 @@
 <div layout:fragment="content" class="container my-3">
     <div class="row my-3">
         <div class="col-6">
-            <a th:href="@{/article/create}" class="btn btn-primary">질문 등록하기</a>
+            <a th:href="@{/post/write}" class="btn btn-primary">질문 등록하기</a>
         </div>
     </div>
     <table class="table">
         <thead class="table-dark">
         <tr class="text-center">
             <th>번호</th>
-            <th>제목</th>
             <th style="width:50%">제목</th>
             <th>글쓴이</th>
             <th>작성일시</th>
         </tr>
         </thead>
         <tbody>
-        <tr class="text-center" th:each="article, loop : ${paging}">
-            <td class="text-start">
-                <a th:href="@{|/article/detail/${article.id}|}" th:text="${article.title}"></a>
+        <tr class="text-center" th:each="article, loop : ${articleList}">
+            <td><span th:text="${article.id}"></span></td>
+            <td class="text-center">
+                <a th:href="@{|/post/${article.id}|}" th:text="${article.title}"></a>
 <!--                <span class="text-danger small ms-2"-->
 <!--                      th:if="${#lists.size(question.answerList) > 0}"-->
 <!--                      th:text="${#lists.size(question.answerList)}">-->
 <!--                    </span>-->
             </td>
             <td><span th:if="${article.writer != null}" th:text="${article.writer.username}"></span></td>
-            <td th:text="${#temporals.format(article.datetime, 'yyyy-MM-dd HH:mm')}"></td>
+            <td th:text="${#temporals.format(article.dateTime, 'yyyy-MM-dd HH:mm')}"></td>
         </tr>
         </tbody>
     </table>
