--- a/src/main/resources/templates/article_detail.html
+++ b/src/main/resources/templates/article_detail.html
@@ -1,39 +1,38 @@
 <html layout:decorate="~{layout}">
 <div layout:fragment="content" class="container my-3">
-    <!-- 질문 -->
-    <h2 class="border-bottom py-2" th:text="${question.subject}"></h2>
+    <!-- 게시글 -->
+    <h2 class="border-bottom py-2" th:text="${article.title}"></h2>
     <div class="card my-3">
         <div class="card-body">
-            <div class="card-text" th:utext="${@commonUtil.markdown(question.content)}"></div>
+            <div class="card-text" th:utext="${article.body}"></div>
             <div class="d-flex justify-content-end">
-                <div th:if="${question.modifyDate != null}" class="badge bg-light text-dark p-2 text-start mx-3">
-                    <div class="mb-2">modified at</div>
-                    <div th:text="${#temporals.format(question.modifyDate, 'yyyy-MM-dd HH:mm')}"></div>
-                </div>
+<!--                <div class="badge bg-light text-dark p-2 text-start mx-3">-->
+<!--                    <div th:text="${#temporals.format(article.dateTime, 'yyyy-MM-dd HH:mm')}"></div>-->
+<!--                </div>-->
                 <div class="badge bg-light text-dark p-2 text-start">
                     <div class="mb-2">
-                        <span th:if="${question.author != null}" th:text="${question.author.username}"></span>
+                        <span th:if="${article.writer != null}" th:text="${article.writer.username}">작성자</span>
                     </div>
-                    <div th:text="${#temporals.format(question.createDate, 'yyyy-MM-dd HH:mm')}"></div>
+                    <div th:text="${#temporals.format(article.dateTime, 'yyyy-MM-dd HH:mm')}"></div>
                 </div>
             </div>
         </div>
     </div>
-    <div class="my-3">
-        <a href="javascript:void(0);" class="recommend btn btn-sm btn-outline-secondary"
-           th:data-uri="@{|/question/vote/${question.id}|}">
-            추천
-            <span class="badge rounded-pill bg-success" th:text="${#lists.size(question.voter)}"></span>
-        </a>
-        <a th:href="@{|/question/modify/${question.id}|}" class="btn btn-sm btn-outline-secondary"
-           sec:authorize="isAuthenticated()"
-           th:if="${question.author != null and #authentication.getPrincipal().getUsername() == question.author.username}"
-           th:text="수정"></a>
-        <a href="javascript:void(0);" th:data-uri="@{|/question/delete/${question.id}|}"
-           class="delete btn btn-sm btn-outline-secondary" sec:authorize="isAuthenticated()"
-           th:if="${question.author != null and #authentication.getPrincipal().getUsername() == question.author.username}"
-           th:text="삭제"></a>
-    </div>
+<!--    <div class="my-3">-->
+<!--        <a href="javascript:void(0);" class="recommend btn btn-sm btn-outline-secondary"-->
+<!--           th:data-uri="@{|/question/vote/${question.id}|}">-->
+<!--            추천-->
+<!--            <span class="badge rounded-pill bg-success" th:text="${#lists.size(question.voter)}"></span>-->
+<!--        </a>-->
+<!--        <a th:href="@{|/question/modify/${question.id}|}" class="btn btn-sm btn-outline-secondary"-->
+<!--           sec:authorize="isAuthenticated()"-->
+<!--           th:if="${question.author != null and #authentication.getPrincipal().getUsername() == question.author.username}"-->
+<!--           th:text="수정"></a>-->
+<!--        <a href="javascript:void(0);" th:data-uri="@{|/question/delete/${question.id}|}"-->
+<!--           class="delete btn btn-sm btn-outline-secondary" sec:authorize="isAuthenticated()"-->
+<!--           th:if="${question.author != null and #authentication.getPrincipal().getUsername() == question.author.username}"-->
+<!--           th:text="삭제"></a>-->
+<!--    </div>-->
 <!--    &lt;!&ndash; 답변의 갯수 표시 &ndash;&gt;-->
 <!--    <h5 class="border-bottom my-3 py-2"-->
 <!--        th:text="|${#lists.size(question.answerList)}개의 답변이 있습니다.|"></h5>-->
