--- a/src/main/resources/templates/article_detail.html
+++ b/src/main/resources/templates/article_detail.html
@@ -18,21 +18,21 @@
             </div>
         </div>
     </div>
-<!--    <div class="my-3">-->
+    <div class="my-3">
 <!--        <a href="javascript:void(0);" class="recommend btn btn-sm btn-outline-secondary"-->
 <!--           th:data-uri="@{|/question/vote/${question.id}|}">-->
 <!--            추천-->
 <!--            <span class="badge rounded-pill bg-success" th:text="${#lists.size(question.voter)}"></span>-->
 <!--        </a>-->
-<!--        <a th:href="@{|/question/modify/${question.id}|}" class="btn btn-sm btn-outline-secondary"-->
-<!--           sec:authorize="isAuthenticated()"-->
-<!--           th:if="${question.author != null and #authentication.getPrincipal().getUsername() == question.author.username}"-->
-<!--           th:text="수정"></a>-->
+        <a th:href="@{|/post/${article.id}/modify|}" class="btn btn-sm btn-outline-secondary"
+           sec:authorize="isAuthenticated()"
+           th:if="${article.writer != null and #authentication.getPrincipal().getUsername() == article.writer.username}"
+           th:text="수정"></a>
 <!--        <a href="javascript:void(0);" th:data-uri="@{|/question/delete/${question.id}|}"-->
 <!--           class="delete btn btn-sm btn-outline-secondary" sec:authorize="isAuthenticated()"-->
 <!--           th:if="${question.author != null and #authentication.getPrincipal().getUsername() == question.author.username}"-->
 <!--           th:text="삭제"></a>-->
-<!--    </div>-->
+    </div>
 <!--    &lt;!&ndash; 답변의 갯수 표시 &ndash;&gt;-->
 <!--    <h5 class="border-bottom my-3 py-2"-->
 <!--        th:text="|${#lists.size(question.answerList)}개의 답변이 있습니다.|"></h5>-->
