feature: display hit count
조회수 표시

--- a/src/main/resources/templates/article_detail.html
+++ b/src/main/resources/templates/article_detail.html
@@ -2,19 +2,28 @@
 <div layout:fragment="content" class="container my-3">
     <!-- 게시글 -->
     <h2 class="border-bottom py-2" th:text="${article.title}"></h2>
+    <div class="card my-1 card-body badge bg-light text-dark p-2 text-start">
+                <span class="mb-2">
+                    작성자: <span th:if="${article.writer != null}" th:text="${article.writer.username}"></span>
+                </span>
+    </div>
+    <div class="card my-sm-1 card-body badge bg-light text-dark p-2 text-start">
+                <span class="mb-2">
+                    작성일: <span th:text="${#temporals.format(article.dateTime, 'yyyy-MM-dd HH:mm')}"></span>
+                </span>
+    </div>
+    <div class="card my-sm-1 card-body badge bg-light text-dark p-2 text-start">
+                <span class="mb-2">
+                    조회수: <span th:text="${article.hit}"></span>
+                </span>
+    </div>
     <div class="card my-3">
-        <div class="card-body">
-            <div class="card-text" th:utext="${article.body}"></div>
+        <div class="card-body pt-3 pb-5">
+            <div class="card-text text-start" th:utext="${article.body}"></div>
             <div class="d-flex justify-content-end">
 <!--                <div class="badge bg-light text-dark p-2 text-start mx-3">-->
 <!--                    <div th:text="${#temporals.format(article.dateTime, 'yyyy-MM-dd HH:mm')}"></div>-->
 <!--                </div>-->
-                <div class="badge bg-light text-dark p-2 text-start">
-                    <div class="mb-2">
-                        <span th:if="${article.writer != null}" th:text="${article.writer.username}">작성자</span>
-                    </div>
-                    <div th:text="${#temporals.format(article.dateTime, 'yyyy-MM-dd HH:mm')}"></div>
-                </div>
             </div>
         </div>
     </div>
