--- a/src/main/resources/templates/article_list.html
+++ b/src/main/resources/templates/article_list.html
@@ -11,6 +11,7 @@
             <th>번호</th>
             <th style="width:50%">제목</th>
             <th>글쓴이</th>
+            <th>조회수</th>
             <th>작성일시</th>
         </tr>
         </thead>
@@ -25,6 +26,7 @@
 <!--                    </span>-->
             </td>
             <td><span th:if="${article.writer != null}" th:text="${article.writer.username}"></span></td>
+            <td><span th:text="${article.hit}"></span></td>
             <td th:text="${#temporals.format(article.dateTime, 'yyyy-MM-dd HH:mm')}"></td>
         </tr>
         </tbody>
