--- a/src/main/resources/templates/article_detail.html
+++ b/src/main/resources/templates/article_detail.html
@@ -20,19 +20,14 @@
     <div class="card my-3">
         <div class="card-body pt-3 pb-5">
             <div class="card-text text-start" th:utext="${article.body}"></div>
-            <div class="d-flex justify-content-end">
-<!--                <div class="badge bg-light text-dark p-2 text-start mx-3">-->
-<!--                    <div th:text="${#temporals.format(article.dateTime, 'yyyy-MM-dd HH:mm')}"></div>-->
-<!--                </div>-->
-            </div>
         </div>
     </div>
     <div class="my-3">
-<!--        <a href="javascript:void(0);" class="recommend btn btn-sm btn-outline-secondary"-->
-<!--           th:data-uri="@{|/question/vote/${question.id}|}">-->
-<!--            추천-->
-<!--            <span class="badge rounded-pill bg-success" th:text="${#lists.size(question.voter)}"></span>-->
-<!--        </a>-->
+        <a href="javascript:void(0);" class="recommend btn btn-sm btn-outline-secondary"
+           th:data-uri="@{|/post/${article.id}/like|}" method="post">
+            추천
+            <span class="badge rounded-pill bg-success" th:text="${#lists.size(article.like)}"></span>
+        </a>
         <a th:href="@{|/post/${article.id}/modify|}" class="btn btn-sm btn-outline-secondary"
            sec:authorize="isAuthenticated()"
            th:if="${article.writer != null and #authentication.getPrincipal().getUsername() == article.writer.username}"
@@ -98,14 +93,14 @@
         });
     });
 
-<!--    const recommend_elements = document.getElementsByClassName("recommend");-->
-<!--    Array.from(recommend_elements).forEach(function(element) {-->
-<!--        element.addEventListener('click', function() {-->
-<!--            if(confirm("정말로 추천하시겠습니까?")) {-->
-<!--                location.href = this.dataset.uri;-->
-<!--            };-->
-<!--        });-->
-<!--    });-->
+    const recommend_elements = document.getElementsByClassName("recommend");
+    Array.from(recommend_elements).forEach(function(element) {-
+        element.addEventListener('click', function() {
+            if(confirm("정말로 추천하시겠습니까?")) {
+                location.href = this.dataset.uri;
+            };
+        });
+    });
 
 </script>
 </html>
