--- a/src/main/resources/templates/article_detail.html
+++ b/src/main/resources/templates/article_detail.html
@@ -24,7 +24,7 @@
     </div>
     <div class="my-3">
         <a href="javascript:void(0);" class="recommend btn btn-sm btn-outline-secondary"
-           th:data-uri="@{|/post/${article.id}/like|}" method="post">
+           th:data-uri="@{|/post/${article.id}/like|}">
             추천
             <span class="badge rounded-pill bg-success" th:text="${#lists.size(article.like)}"></span>
         </a>
