--- a/src/main/resources/templates/article_detail.html
+++ b/src/main/resources/templates/article_detail.html
@@ -44,6 +44,7 @@
     <div class="card my-3" th:each="comment : ${article.commentList}">
         <a th:id="|comment_${comment.id}|"></a>
         <div class="card-body">
+            <div class="card-text" th:utext="${comment.body}"></div>
             <div class="d-flex justify-content-end">
                 <div th:if="${comment.dateTime != null}" class="badge bg-light text-dark p-2 text-start mx-3">
                     <div class="mb-2">written at</div>
