--- a/src/main/resources/templates/navbar.html
+++ b/src/main/resources/templates/navbar.html
@@ -12,7 +12,10 @@
                     <a class="nav-link" sec:authorize="isAuthenticated()" th:href="@{/member/logout}">로그아웃</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" th:href="@{/member/join}">회원가입</a>
+                    <a class="nav-link" sec:authorize="isAnonymous()" th:href="@{/member/join}">회원가입</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" sec:authorize="isAuthenticated()" th:href="@{/post/myList}">내가 쓴 게시글</a>
                 </li>
             </ul>
         </div>
