--- a/src/main/resources/templates/article_detail.html
+++ b/src/main/resources/templates/article_detail.html
@@ -42,10 +42,10 @@
            th:if="${article.writer != null and #authentication.getPrincipal().getUsername() == article.writer.username}"
            th:text="삭제"></a>
     </div>
-    <!-- 답변의 갯수 표시 -->
+    <!-- 댓글의 갯수 표시 -->
     <h5 class="border-bottom my-3 py-2"
         th:text="|${#lists.size(article.commentList)}개의 답변이 있습니다.|"></h5>
-    <!-- 답변 반복 시작 -->
+    <!-- 댓글 반복 시작 -->
     <div class="card my-3" th:each="comment : ${article.commentList}">
         <a th:id="|comment_${comment.id}|"></a>
         <div class="card-body">
@@ -68,23 +68,23 @@
 <!--                    추천-->
 <!--                    <span class="badge rounded-pill bg-success" th:text="${#lists.size(answer.voter)}"></span>-->
 <!--                </a>-->
-<!--                <a th:href="@{|/answer/modify/${answer.id}|}" class="btn btn-sm btn-outline-secondary"-->
-<!--                   sec:authorize="isAuthenticated()"-->
-<!--                   th:if="${answer.author != null and #authentication.getPrincipal().getUsername() == answer.author.username}"-->
-<!--                   th:text="수정"></a>-->
-<!--                <a href="javascript:void(0);" th:data-uri="@{|/answer/delete/${answer.id}|}"-->
-<!--                   class="delete btn btn-sm btn-outline-secondary" sec:authorize="isAuthenticated()"-->
-<!--                   th:if="${answer.author != null and #authentication.getPrincipal().getUsername() == answer.author.username}"-->
-<!--                   th:text="삭제"></a>-->
+                <a th:href="@{|/post/${article.id}/${comment.id}/modify|}" class="btn btn-sm btn-outline-secondary"
+                   sec:authorize="isAuthenticated()"
+                   th:if="${article.writer != null and #authentication.getPrincipal().getUsername() == comment.writer.username}"
+                   th:text="수정"></a>
+                <a href="javascript:void(0);" th:data-uri="@{|/post/${article.id}/${comment.id}/delete|}"
+                   class="delete btn btn-sm btn-outline-secondary" sec:authorize="isAuthenticated()"
+                   th:if="${article.writer != null and #authentication.getPrincipal().getUsername() == comment.writer.username}"
+                   th:text="삭제"></a>
             </div>
         </div>
     </div>
-    <!-- 답변 반복 끝  -->
-    <!-- 답변 작성 -->
+    <!-- 댓글 반복 끝  -->
+    <!-- 댓글 작성 -->
     <form th:action="@{|/post/${article.id}/comment/write|}" th:object="${commentForm}" method="post" class="my-3">
         <div th:replace="~{form_errors :: formErrorsFragment}"></div>
-        <textarea sec:authorize="isAnonymous()" disabled th:field="*{body}" class="form-control" rows="10"></textarea>
-        <textarea sec:authorize="isAuthenticated()" th:field="*{body}" class="form-control" rows="10"></textarea>
+        <textarea sec:authorize="isAnonymous()" disabled th:field="*{body}" class="form-control" rows="5"></textarea>
+        <textarea sec:authorize="isAuthenticated()" th:field="*{body}" class="form-control" rows="5"></textarea>
         <input type="submit" value="댓글등록" class="btn btn-primary my-2">
     </form>
 </div>
